--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,6 @@
     ],
     "license": "MIT",
     "require": {
-        "asifm42/scorm-cloud-php": "dev-master"
+        "asifm42/scorm-cloud-php": "*"
     }
 }
