--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     ],
     "license": "MIT",
     "require": {
-        "asifm42/scorm-cloud-php": "*"
+        "asifm42/scorm-cloud-php": "dev-master"
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
