change compser.json scripts

--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
         }
     },
     "scripts": {
-        "post-package-install": [
-            "@php artisan vendor:publish --provider=ProgramZheng\\ScormCloudLaravel\\ScormCloudLaravelProvider"
+        "post-install-cmd": [
+            "php artisan vendor:publish --provider=ProgramZheng\\ScormCloudLaravel\\ScormCloudLaravelProvider"
         ]
     },
     "minimum-stability": "dev"
