composer.json scirpts add post updaate cmd

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,9 @@
     "scripts": {
         "post-install-cmd": [
             "php artisan vendor:publish --provider=ProgramZheng\\ScormCloudLaravel\\ScormCloudLaravelProvider"
+        ],
+        "post-update-cmd" : [
+            "php artisan vendor:publish --provider=ProgramZheng\\ScormCloudLaravel\\ScormCloudLaravelProvider"
         ]
     },
     "minimum-stability": "dev"
